qt/gen_qundoview.h

typedef struct QActionEvent QActionEvent;
typedef struct QCloseEvent QCloseEvent;
typedef struct QContextMenuEvent QContextMenuEvent;
typedef struct QDragEnterEvent QDragEnterEvent;
typedef struct QEvent QEvent;
typedef struct QFocusEvent QFocusEvent;
typedef struct QHideEvent QHideEvent;
typedef struct QInputMethodEvent QInputMethodEvent;
typedef struct QKeyEvent QKeyEvent;
typedef struct QModelIndex QModelIndex;
typedef struct QMouseEvent QMouseEvent;
typedef struct QMoveEvent QMoveEvent;
typedef struct QObject QObject;
typedef struct QPaintEngine QPaintEngine;
typedef struct QShowEvent QShowEvent;
typedef struct QSize QSize;
typedef struct QTabletEvent QTabletEvent;
typedef struct QVariant QVariant;
typedef struct QWidget QWidget;
bool QUndoView_override_virtual_setSelectionModel(void* self, intptr_t slot);
bool QUndoView_override_virtual_keyboardSearch(void* self, intptr_t slot);
void QUndoView_virtualbase_keyboardSearch(void* self, struct miqt_string search);
bool QUndoView_override_virtual_sizeHintForRow(void* self, intptr_t slot);
int QUndoView_virtualbase_sizeHintForRow(const void* self, int row);
bool QUndoView_override_virtual_sizeHintForColumn(void* self, intptr_t slot);
int QUndoView_virtualbase_sizeHintForColumn(const void* self, int column);
bool QUndoView_override_virtual_inputMethodQuery(void* self, intptr_t slot);
QVariant* QUndoView_virtualbase_inputMethodQuery(const void* self, int query);
bool QUndoView_override_virtual_selectAll(void* self, intptr_t slot);
void QUndoView_virtualbase_selectAll(void* self);
bool QUndoView_override_virtual_updateEditorData(void* self, intptr_t slot);
void QUndoView_virtualbase_updateEditorData(void* self);
bool QUndoView_override_virtual_updateEditorGeometries(void* self, intptr_t slot);
void QUndoView_virtualbase_updateEditorGeometries(void* self);
bool QUndoView_override_virtual_verticalScrollbarAction(void* self, intptr_t slot);
void QUndoView_virtualbase_verticalScrollbarAction(void* self, int action);
bool QUndoView_override_virtual_horizontalScrollbarAction(void* self, intptr_t slot);
void QUndoView_virtualbase_horizontalScrollbarAction(void* self, int action);
bool QUndoView_override_virtual_verticalScrollbarValueChanged(void* self, intptr_t slot);
void QUndoView_virtualbase_verticalScrollbarValueChanged(void* self, int value);
bool QUndoView_override_virtual_horizontalScrollbarValueChanged(void* self, intptr_t slot);
void QUndoView_virtualbase_horizontalScrollbarValueChanged(void* self, int value);
bool QUndoView_override_virtual_closeEditor(void* self, intptr_t slot);
void QUndoView_virtualbase_closeEditor(void* self, QWidget* editor, int hint);
bool QUndoView_override_virtual_commitData(void* self, intptr_t slot);
void QUndoView_virtualbase_commitData(void* self, QWidget* editor);
bool QUndoView_override_virtual_editorDestroyed(void* self, intptr_t slot);
void QUndoView_virtualbase_editorDestroyed(void* self, QObject* editor);
bool QUndoView_override_virtual_edit2(void* self, intptr_t slot);
bool QUndoView_virtualbase_edit2(void* self, QModelIndex* index, int trigger, QEvent* event);
bool QUndoView_override_virtual_selectionCommand(void* self, intptr_t slot);
int QUndoView_virtualbase_selectionCommand(const void* self, QModelIndex* index, QEvent* event);
bool QUndoView_override_virtual_focusNextPrevChild(void* self, intptr_t slot);
bool QUndoView_virtualbase_focusNextPrevChild(void* self, bool next);
bool QUndoView_override_virtual_viewportEvent(void* self, intptr_t slot);
bool QUndoView_virtualbase_viewportEvent(void* self, QEvent* event);
bool QUndoView_override_virtual_mousePressEvent(void* self, intptr_t slot);
void QUndoView_virtualbase_mousePressEvent(void* self, QMouseEvent* event);
bool QUndoView_override_virtual_mouseDoubleClickEvent(void* self, intptr_t slot);
void QUndoView_virtualbase_mouseDoubleClickEvent(void* self, QMouseEvent* event);
bool QUndoView_override_virtual_dragEnterEvent(void* self, intptr_t slot);
void QUndoView_virtualbase_dragEnterEvent(void* self, QDragEnterEvent* event);
bool QUndoView_override_virtual_focusInEvent(void* self, intptr_t slot);
void QUndoView_virtualbase_focusInEvent(void* self, QFocusEvent* event);
bool QUndoView_override_virtual_focusOutEvent(void* self, intptr_t slot);
void QUndoView_virtualbase_focusOutEvent(void* self, QFocusEvent* event);
bool QUndoView_override_virtual_keyPressEvent(void* self, intptr_t slot);
void QUndoView_virtualbase_keyPressEvent(void* self, QKeyEvent* event);
bool QUndoView_override_virtual_inputMethodEvent(void* self, intptr_t slot);
void QUndoView_virtualbase_inputMethodEvent(void* self, QInputMethodEvent* event);
bool QUndoView_override_virtual_eventFilter(void* self, intptr_t slot);
bool QUndoView_virtualbase_eventFilter(void* self, QObject* object, QEvent* event);
bool QUndoView_override_virtual_minimumSizeHint(void* self, intptr_t slot);
QSize* QUndoView_virtualbase_minimumSizeHint(const void* self);
bool QUndoView_override_virtual_sizeHint(void* self, intptr_t slot);
QSize* QUndoView_virtualbase_sizeHint(const void* self);
bool QUndoView_override_virtual_setupViewport(void* self, intptr_t slot);
void QUndoView_virtualbase_setupViewport(void* self, QWidget* viewport);
bool QUndoView_override_virtual_contextMenuEvent(void* self, intptr_t slot);
void QUndoView_virtualbase_contextMenuEvent(void* self, QContextMenuEvent* param1);
bool QUndoView_override_virtual_changeEvent(void* self, intptr_t slot);
void QUndoView_virtualbase_changeEvent(void* self, QEvent* param1);
bool QUndoView_override_virtual_devType(void* self, intptr_t slot);
int QUndoView_virtualbase_devType(const void* self);
bool QUndoView_override_virtual_setVisible(void* self, intptr_t slot);
void QUndoView_virtualbase_setVisible(void* self, bool visible);
bool QUndoView_override_virtual_heightForWidth(void* self, intptr_t slot);
int QUndoView_virtualbase_heightForWidth(const void* self, int param1);
bool QUndoView_override_virtual_hasHeightForWidth(void* self, intptr_t slot);
bool QUndoView_virtualbase_hasHeightForWidth(const void* self);
bool QUndoView_override_virtual_paintEngine(void* self, intptr_t slot);
QPaintEngine* QUndoView_virtualbase_paintEngine(const void* self);
bool QUndoView_override_virtual_keyReleaseEvent(void* self, intptr_t slot);
void QUndoView_virtualbase_keyReleaseEvent(void* self, QKeyEvent* event);
bool QUndoView_override_virtual_enterEvent(void* self, intptr_t slot);
void QUndoView_virtualbase_enterEvent(void* self, QEvent* event);
bool QUndoView_override_virtual_leaveEvent(void* self, intptr_t slot);
void QUndoView_virtualbase_leaveEvent(void* self, QEvent* event);
bool QUndoView_override_virtual_moveEvent(void* self, intptr_t slot);
void QUndoView_virtualbase_moveEvent(void* self, QMoveEvent* event);
bool QUndoView_override_virtual_closeEvent(void* self, intptr_t slot);
void QUndoView_virtualbase_closeEvent(void* self, QCloseEvent* event);
bool QUndoView_override_virtual_tabletEvent(void* self, intptr_t slot);
void QUndoView_virtualbase_tabletEvent(void* self, QTabletEvent* event);
bool QUndoView_override_virtual_actionEvent(void* self, intptr_t slot);
void QUndoView_virtualbase_actionEvent(void* self, QActionEvent* event);
bool QUndoView_override_virtual_showEvent(void* self, intptr_t slot);
void QUndoView_virtualbase_showEvent(void* self, QShowEvent* event);
bool QUndoView_override_virtual_hideEvent(void* self, intptr_t slot);
void QUndoView_virtualbase_hideEvent(void* self, QHideEvent* event);